* 2012-09-12 - marcus.klein@open-xchange.com

 - Fix for bug 22978: Defined the ResellerAdmin SOAP object completely new by hand. Looks much more clean now and works as expected.

* 2012-09-11 - thorben.betten@open-xchange.com

 - Fix for bug 22917: Added previous naming for downward compatibility
 - Fix for bug 22975: Select high log level for all error categories to let them be logged

* 2012-09-11 - marcus.klein@open-xchange.com

 - Fix for bug 22939: Checking for missing credentials and throwing an InvalidCredentialsException with message "Credentials are missing".
 - Fix for bug 22909: Removed second configuration directory from report client CLT.
 - Fix for bug 22969: Made generic elements transformation for SOAP CXF more robust against wrong client requests.
 - Fix for bug 10007: Corrected return codes of CLTs if object is not found through its name.

* 2012-09-10 - marcus.klein@open-xchange.com

 - Fix for bug 22949: Missed to start OSGi service trackers for DatabaseService.
 - Fix for bug 22961: Added conflict to old open-xchange-commons-logging-log4j package.
 - Fix for bug 22869: Iterating now all bundles in system excluding bundle fragments and checking if bundles are in active state.

* 2012-09-07 - thorben.betten@open-xchange.com

 - Fix for bug 22943: Limit max. size of parseable HTML content; configurable through 'com.openexchange.html.maxLength'

* 2012-09-07 - marcus.klein@open-xchange.com

 - Fix for bug 22937: Preventing NullPointerExceptions in SOAP administrator reseller service if optional restrictions are not sent.
 - Fix for bug 22933: Pushing the DatabaseService into AdminCache instances of administration autocontextid bundle.
 - Fix for bug 22669: Not using any reflection mechanisms anymore to instantiate OXToolStorageInterface to prevent NullPointerException.

* 2012-09-06 - marcus.klein@open-xchange.com
