@@ -20,7 +20,13 @@ com.openexchange.carddav.combinedRequestTimeout=20000
 # available as a resource collection, while '2' only exposes an aggregated 
 # collection containing  all contact resources from all visible folders. The 
 # default value '0' exposes either an aggregated collection or individual 
-# collections for each folder, depending on the client's user-agent (if the 
-# user-agent indicates the Mac OS Addressbook client, the aggregated 
-# collection is used, otherwise the individual ones). 
+# collections for each folder, depending on the client's user-agent that is 
+# matched against the pattern in 'userAgentForAggregatedCollection'. 
 com.openexchange.carddav.exposedCollections=0
+
+# Regular expression to match against the client's user-agent to decide 
+# whether the aggregated collection is exposed or not. The default pattern 
+# matches all known varieties of the Mac OS Addressbook client, that doesn't 
+# support multiple collections. Only used if 'exposedCollections' is set to 
+# '0'. The pattern is used case insensitive. 
+com.openexchange.carddav.userAgentForAggregatedCollection=.*CFNetwork.*Darwin.*|.*AddressBook.*CardDAVPlugin.*Mac_OS_X.*|.*Mac OS X.*AddressBook.*
