@@ -1,3 +1,7 @@
+* 2012-09-14 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 22967: More flexible user-agent matching for Mac OS Addressbook client 
+
 * 2012-09-12 - marcus.klein@open-xchange.com
 
  - Fix for bug 22978: Defined the ResellerAdmin SOAP object completely new by hand. Looks much more clean now and works as expected.
